# onboarder

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  justfile  readme.md
.github/workflows/: docker.yaml  release-pls.yaml  release_pls.yml  verify.yaml  verify_build_release.yml
BabsyApp-API/: curl_Login_Example.md  user_info.md
assets/: app.css
baselhack/: BASEL_HACK_README.md  install.md
code/: Cargo.toml  README.md  justfile
code/assets/: app.css
code/src/: main.rs  tec.rs
code/src/bookings/: address.rs  booking.rs  booking_state.rs  mod.rs
code/src/fake_app/: mod.rs
code/src/persistence/: booking_requests.rs  fake_data.rs  mod.rs  super_babsys.rs
code/src/superbabsys/: availability.rs  lang_comp.rs  mod.rs  super_babsy.rs
code/src/view/: body.rs  footer.rs  header.rs  mod.rs
code/src/view/admin_dashboard/: booking_table.rs  mod.rs  reject_booking.rs  user_table.rs
code/src/view/dashboard/: mod.rs  table.rs  user_table.rs
code/src/view/onboarding_form/: booking.rs  hours.rs  mod.rs  new_booking.rs  superbabsys.rs
documentation/: docker_build.md  local_development.md  redirect.md
src/: main.rs
src/assets/: pico.rs
src/bookings/: mod.rs
src/superbabsys/: lang_comp.rs  super_babsy.rs
src/view/: body.rs
src/view/admin_dashboard/: confirm_booking.rs  delete_booking.rs  user_table.rs
src/view/onboarding_form/: new_booking.rs  superbabsys.rs
