[package]
name = "onboarder"
version = "0.1.4"
edition = "2021"
authors = ["Silen Locatelli", "Babsy", "BabsScale Team Basel Hack"]
license-file = "LICENSE"
description = "An onboarder for the Babsy platform"


[dependencies]
rocket ={ version = "0.5.0" } 
maud = { version = "0.25" }
chrono ="0.4.38"
uuid = { version ="1.11.0", features = ["v4", "fast-rng"] }


[profile.dev]
opt-level = 0
